--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,6 +40,8 @@ dependencies {
     compile 'com.github.githubwing:ByeBurger:1.2.3'
     testCompile 'junit:junit:4.12'
     implementation project(':folding-cell-1.2.1')
+    compile 'com.victor:lib:1.0.4'
+    compile 'com.afollestad.material-dialogs:core:0.9.6.0'
 }
 
 
