--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,7 +33,7 @@
         <receiver android:name=".AlarmReceiver">
 
         </receiver>
-        <receiver
+        <!--<receiver
             android:name=".InitAlarmReceiver"
             android:enabled="true"
             android:exported="true">
@@ -41,6 +41,7 @@
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
             </intent-filter>
         </receiver>
+        -->
     </application>
 
 </manifest>
